Sun Sep 25 20:54:10 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* lib/yaml/dbm/dbm.rb: fix #update, add #key for using istead #index.
	  [Bug #5305][ruby-dev:44485]

Sun Sep 25 16:54:33 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (require_enc): reject only loading from untrusted
	  load paths.  [ruby-dev:44541] [Bug #5279]

	* transcode.c (load_transcoder_entry): ditto.

Sun Sep 25 16:45:05 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: ignore all warnings from an arbitrary
	  header in /usr/local/include.

Sun Sep 25 03:43:03 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* enum.c (slice_before_i): use rb_attr_get to surpress wrong warning
	  for internal instance variable slicebefore_initial_state.

Fri Sep 23 14:20:14 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c: remove unused variable.

Fri Sep 23 13:46:59 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_ssl_session.rb: execute test_session_exts_read
	  only for OpenSSL versions >= 0.9.8k. Thanks, Eric Wong, for
	  reporting this.
	  [Bug #4961] [ruby-core:37726]

Fri Sep 23 11:59:08 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_ssl_session.rb: ensure server calls callbacks in
	  test_ctx_server_session_cb. Thanks to Eric Wong for the patch.
	  [Bug #5336] [ruby-core:39619]

Thu Sep 22 02:53:19 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_call_cfunc): suppress a warning.  note that
	  `volatile type *var' doesn't make var itself volatile.

Thu Sep 22 01:52:48 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* thread_pthread.c (ubf_select): activate timer thread when interrupt
	  blocking thread.
	  A patch created by Koichi Sasada. [ruby-core:39634] [Bug #5343]
	  to cover race condition, timer thread periodically send SIGVTARLM to
	  threads in signal thread list. so you should activate timer thread
	  when interrupt a thread.
